--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,3 +7,8 @@ spring:
     password: root
   jpa:
     show-sql: true
+
+  jwt:
+    secret: ${JWT_SECRET}
+    accessTokenExpiration: 7200 # 15m
+    refreshTokenExpiration: 604800 # 7d
